feat: 다이어리 entity에 필요한 메서드 추가
- 다이어리 수정, 추가 시 필요한 메서드 생성